Added Nav links and main paragraphs.

--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
 </header>
 <nav>
   <ul>
-    <li>Stars</li>
-    <li>Terrestrial planets</li>
-    <li>Gas giants</li>
-    <li>Dwarf planets</li>
-    <li>Asteroids</li>
-    <li>Comets</li>
+    <li><a href="#Stars">Stars</a></li>
+    <li><a href="#Terres">Terrestrial planets</a></li>
+    <li><a href="#Gas">Gas giants</a></li>
+    <li><a href="#Dwarf">Dwarf planets</a></li>
+    <li><a href="#Aster">Asteroids</a></li>
+    <li><a href="#Comet">Comets</a></li>
 </nav>
 <body>
   <main>
-    <img src="images/banner.svg">
-    <p>The Solar System—our home in the stars</p>
-    <p> he Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
+    <figure>
+      <img src="images/banner.svg">
+      <figcaption>The Solar System, our home in the stars</figcaption>
+    </figure>
+    <p> The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
   <main>
 </body>
