Added title and closed main.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
+<!DOCTYPE html>
 <header>
   <img src="images/logo.svg">
-  <h1>The Solar System</h1>
+  <hi><title>The Solar System</title></h1>
 </header>
 <nav>
   <ul>
@@ -18,5 +19,5 @@
       <figcaption>The Solar System, our home in the stars</figcaption>
     </figure>
     <p> The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
-  <main>
+  </main>
 </body>
