Fixed header and closed opened tags.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <header>
-  <img src="images/logo.svg">
-  <hi><title>The Solar System</title></h1>
+  <img src="images/logo.svg" alt="">
+  <h1><title>The Solar System</title></h1>
 </header>
 <nav>
   <ul>
@@ -11,11 +11,12 @@
     <li><a href="#Dwarf">Dwarf planets</a></li>
     <li><a href="#Aster">Asteroids</a></li>
     <li><a href="#Comet">Comets</a></li>
+  </ul>
 </nav>
 <body>
   <main>
     <figure>
-      <img src="images/banner.svg">
+      <img src="images/banner.svg" alt="">
       <figcaption>The Solar System, our home in the stars</figcaption>
     </figure>
     <p> The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
