--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
-<header>
-  <img src="images/logo.svg" alt="">
-  <h1><title>The Solar System</title></h1>
-</header>
+<html lang="en-ca">
+<head>
+  <title>The Solar System</title>
+</head>
+<body>
+  <header>
+    <img src="images/logo.svg" alt="">
+    <h1>The Solar System</h1>
+  </header>
 <nav>
   <ul>
     <li><a href="#Stars">Stars</a></li>
@@ -13,12 +18,12 @@
     <li><a href="#Comet">Comets</a></li>
   </ul>
 </nav>
-<body>
-  <main>
-    <figure>
-      <img src="images/banner.svg" alt="">
-      <figcaption>The Solar System, our home in the stars</figcaption>
-    </figure>
-    <p> The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
-  </main>
+<main>
+  <figure>
+    <img src="images/banner.svg" alt="">
+    <figcaption>The Solar System, our home in the stars</figcaption>
+  </figure>
+  <p> The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
+</main>
 </body>
+</html>
