--- a/index.html
+++ b/index.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html lang="en-ca">
 <head>
+  <meta charset="utf-8">
   <title>The Solar System</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
-<header>
+  <header>
     <img src="images/logo.svg" alt="">
     <h1>The Solar System</h1>
-<nav>
-  <ul>
-    <li><a href="#Stars">Stars</a></li>
-    <li><a href="#Terres">Terrestrial planets</a></li>
-    <li><a href="#Gas">Gas giants</a></li>
-    <li><a href="#Dwarf">Dwarf planets</a></li>
-    <li><a href="#Aster">Asteroids</a></li>
-    <li><a href="#Comet">Comets</a></li>
-  </ul>
-</nav>
-</header>
-<main>
+    <nav>
+      <ul>
+        <li><a href="#Stars">Stars</a></li>
+        <li><a href="#Terres">Terrestrial planets</a></li>
+        <li><a href="#Gas">Gas giants</a></li>
+        <li><a href="#Dwarf">Dwarf planets</a></li>
+        <li><a href="#Aster">Asteroids</a></li>
+        <li><a href="#Comet">Comets</a></li>
+      </ul>
+    </nav>
+  </header>
   <figure>
     <img src="images/banner.svg" alt="">
     <figcaption>The Solar System, our home in the stars</figcaption>
   </figure>
-  <p> The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
-</main>
+  <main>
+    <p> The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
+  </main>
 </body>
 </html>
